objects/Log_Apex_Jobs__c/Log_Apex_Jobs__c.object-meta.xml
<CustomObject>
    <label>Log Apex Jobs</label>
    <nameField>
        <label>Log Apex Jobs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Apex Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>