objects/Log_Apex_Jobs__c/fields/ApexClassId__c.field-meta.xml
<CustomField>
    <fullName>ApexClassId__c</fullName>
    <label>ApexClassId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>