objects/Log_Apex_Jobs__c/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <description>The date and time when the job was completed.</description>
    <label>CompletedDate</label>
    <type>DateTime</type>
</CustomField>