objects/Log_Apex_Jobs__c/fields/Content_Document_Links_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Links_Deleted__c</fullName>
    <label>Content Document Links Deleted</label>
    <summarizedField>Log_Apex_Job_Details__c.Content_Document_Links_Deleted__c</summarizedField>
    <summaryForeignKey>Log_Apex_Job_Details__c.Log_Apex_Jobs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>