objects/Log_Apex_Jobs__c/fields/Email_Message_Attachments_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Attachments_Deleted__c</fullName>
    <label>Email Message Attachments Deleted</label>
    <summarizedField>Log_Apex_Job_Details__c.Email_Message_Attachments_Deleted__c</summarizedField>
    <summaryForeignKey>Log_Apex_Job_Details__c.Log_Apex_Jobs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>