objects/Log_Apex_Jobs__c/fields/Emails_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Emails_Deleted__c</fullName>
    <label>Emails Deleted</label>
    <summarizedField>Log_Apex_Job_Details__c.Emails_Deleted__c</summarizedField>
    <summaryForeignKey>Log_Apex_Job_Details__c.Log_Apex_Jobs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>