objects/Log_Apex_Jobs__c/fields/JobItemsProcessed__c.field-meta.xml
<CustomField>
    <fullName>JobItemsProcessed__c</fullName>
    <description>Number of job items processed.</description>
    <label>JobItemsProcessed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>