objects/Log_Apex_Jobs__c/fields/JobType__c.field-meta.xml
<CustomField>
    <fullName>JobType__c</fullName>
    <description>The type of job being processed.</description>
    <label>JobType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ApexToken</fullName>
            </value>
            <value>
                <fullName>BatchApex</fullName>
            </value>
            <value>
                <fullName>BatchApexWorker</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>Queueable</fullName>
            </value>
            <value>
                <fullName>ScheduledApex</fullName>
            </value>
            <value>
                <fullName>SharingRecalculation</fullName>
            </value>
            <value>
                <fullName>TestRequest</fullName>
            </value>
            <value>
                <fullName>TestWorker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>