objects/Log_Apex_Jobs__c/fields/NumberOfErrors__c.field-meta.xml
<CustomField>
    <fullName>NumberOfErrors__c</fullName>
    <description>Total number of batches with a failure. A batch is considered transactional, so any unhandled exceptions constitute an entire failure of the batch.</description>
    <label>NumberOfErrors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>