objects/Log_Apex_Jobs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AsyncApexJobId__c</columns>
    <columns>CompletedDate__c</columns>
    <columns>Attachments_Deleted__c</columns>
    <columns>Content_Document_Links_Deleted__c</columns>
    <columns>Email_Message_Attachments_Deleted__c</columns>
    <columns>Emails_Deleted__c</columns>
    <columns>FeedItems_Deleted__c</columns>
    <columns>JobItemsProcessed__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>